fix nav z-index

--- a/sass/ui.scss
+++ b/sass/ui.scss
@@ -22,6 +22,8 @@ nav {
 	position      : fixed;
 	top           : 0;
 	left          : 0;
+	z-index       : 99;
+	
 	// background : darken($base-p, 10%);
 	background    : $dark-p-1;
 
